# python-ai-playground

./: .gitignore  .snippets.json  AGENTS.md  README.md  pyproject.toml
example_project/: README.md  __init__.py  main.py  store.py
example_project/docs/: USER_DOCS.md
modules/: __init__.py
modules/agent/: __init__.py  main.py
modules/code_gen/: __init__.py  main.py
modules/code_search/: __init__.py  main.py
modules/langraph/: __init__.py  classifier.py  config.py  graph.py  llm.py  main.py  nodes.py  retrieval.py  state.py
modules/rag/: __init__.py  main.py
